<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayersNames">

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/get_names_buttonAdd"
        android:id="@+id/buttonAdd"
        android:onClick="add"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/get_names_buttonUndo"
        android:id="@+id/buttonUndo"
        android:onClick="undo"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/get_names_buttonNext"
        android:id="@+id/buttonNext"
        android:onClick="next"
        android:visibility="gone"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="@dimen/text_margin"
        android:text="@string/get_names_text1"
        android:shadowColor="@color/black"
        android:shadowRadius="1.5"
        android:shadowDx="1"
        android:shadowDy="1"
        android:id="@+id/text1"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="@dimen/text_margin"
        android:hint="@string/get_names_hint"
        android:textColorHint="@color/white"
        android:ems="10"
        android:textColor="@color/white"
        android:id="@+id/editText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/get_names_text2"
        android:shadowColor="@color/black"
        android:shadowRadius="1.5"
        android:shadowDx="1"
        android:shadowDy="1"
        android:id="@+id/text2"
        android:textColor="@color/white"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
